# kforge-studio

./: .gitignore  BuildJob.h  BuildJobWidget.cpp  BuildJobWidget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  OtherWidgets.cpp  OtherWidgets.h  README.md  SidebarWidget.cpp  SidebarWidget.h  kforge-studio.pro  main.cpp
kforge-studio.app/Contents/: Info.plist
